--- a/Film Website/film.html
+++ b/Film Website/film.html
@@ -30,8 +30,7 @@
                 <p><strong>Release date:</strong> December 25, 2014</p>
                 <p><strong>Director:</strong> Morten Tyldum</p>
                 <p><strong>Writers:</strong>Graham Moore and Andrew Hodges</p>
-                <p><strong>Box office:</strong> 2.788 billion USD</p>
-                <p><strong>Budget:</strong> 233,555,708 worldwide</p>
+                <p><strong>Gross:</strong> 233,555,708 worldwide</p>
                 <p><strong>Cast:</strong></p>
                 
                 <ul>
