--- a/Film Website/film.html
+++ b/Film Website/film.html
@@ -2,9 +2,11 @@
 <html>
 <head>
   <title>My Favorite Movie</title>
+  <!--connecting CSS files-->
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="film_1.css">
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Sigmar+One" />
+
 </head>
 <body>
         <header>
@@ -18,13 +20,14 @@
                 <section class="module2">
                         <section class="title">
                                 <h2>Work of a genious </h2>
+                        <!--The about section of the movie-->
                         </section>
                         <section class="paragraph">
                         <p>During the World War II, the mathematician Alan Turing joins a team of code-breakers at top-secret facility at Bletchley Park to try to decipher the code of the German enigma machine. </p>
                         <p>Turing is a homosexual genius and along two years, he and his team successfully develop another machine to decipher the enigma.</p>
                         </section>
                 </section>
-                       
+        <!--information the Movie-->
       <section class="module3">
       <section class="info_section">
                 <p><strong>Release date:</strong> December 25, 2014</p>
@@ -32,13 +35,14 @@
                 <p><strong>Writers:</strong>Graham Moore and Andrew Hodges</p>
                 <p><strong>Gross:</strong> 233,555,708 worldwide</p>
                 <p><strong>Cast:</strong></p>
-                
+        <!--Cast-->
                 <ul>
                   <li>Benedict Cumberbatch</li>
                   <li>Keira Knightley</li>
                   <li>Mathew William</li>
                   <li>Allen Leech</li>
                 </ul>
+                <!--may need to add 3 more links here-->
                 <p><strong>Related Films:</strong></p>
                 <ul>
                       <li style="display: inline; padding: 10px"><a href=" https://en.wikipedia.org/wiki/Bridge_of_Spies_(film)"> Bridge of Spies </a></li>
