--- a/Film Website/film.html
+++ b/Film Website/film.html
@@ -5,6 +5,7 @@
   <!--connecting CSS files-->
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="film_1.css">
+    <!--may need to change font, css font not working properly-->
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Sigmar+One" />
 
 </head>
